# nosh

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README_SECURITY.md  conanfile.txt  nosh-manager.ps1  nosh-manager.sh
.github/workflows/: c-cpp.yml
cmake/: darwin-toolchain.cmake  windows-toolchain.cmake
include/: aliases.h  builtins.h  cobalt.h  environment.h  executor.h  help.h  history.h  integrity.h  network.h  nosh.h  password.h  version.h.in
src/: aliases.c  builtins.c  cobalt.c  environment.c  executor.c  help.c  history.c  integrity.c  main.c  network.c  password.c
